# wheelchairRobot

./: CmdLink.cpp  README.md  desktop.ini
BotSim/: .gitignore  CMakeLists.txt  CmdLink.cpp  CmdLink.h  PacketSerial.h  botsim.cpp  botsim.h  main.cpp  motorsim.h  robotmotion.cpp
BotSim/comm/: serialport.cpp  serialport.h
BotSim/graphics/: graphics.cpp  graphics.h
BotSim/utility/: paths.cpp  rand.h
CmdLink/: CmdLink.cpp  CmdLink.h  library.properties
CommMon/: CommMon.ino
LidarLib/: CMakeLists.txt  absolutepostracker.h  bitrange.h  lidar.cpp  lidar.h  main.cpp  readme.txt  robotmotion.cpp
LidarLib/Encoding/: COBS.h
LidarLib/comm/: serialport.cpp  serialport.h
LidarLib/graphics/: graphics.cpp  graphics.h
LidarLib/utility/: rand.cpp
Vec2d/: Vec2d.cpp  Vec2d.h
build-roboTry4-Desktop_Qt_5_12_11_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.roboTry4.Debug  object_script.roboTry4.Release
build-roboTry4-Desktop_Qt_5_12_11_MinGW_64_bit-Debug/debug/: moc_networkclient.cpp  moc_networkplugin.cpp  moc_networkserver.cpp  moc_plugin.cpp  moc_serialportreader.cpp  moc_window.cpp
clipperExample/: CMakeLists.txt  clipper.h  main.cpp  polyops.cpp  polyops.h
clipperExample/comm/: serialport.h
clipperExample/graphics/: graphics.cpp  graphics.h  graphics_other.cpp  vec2d.cpp  vec2d.h
clipperExample/utility/: rand.cpp
dumbcontrol/: dumbcontrol.ino
lidar/: CMakeLists.txt  lidarwrapper.cpp  lidarwrapper.h  main.cpp  rplidar_driver.lib
lidar/Encoding/: SLIP.h
lidar/utility/: rand.h
navBrain/: CmdLink.cpp  CmdLink.h  absolutepostracker.cpp  absolutepostracker.h  area.h  areatree.cpp  areatree.h  botcomm.cpp  botcomm.h  botcommserial.cpp  botcommserial.h  botconnection.cpp  botconnection.h  graphics.cpp  graphics.h  main.cpp  maing.cpp  navBrain.pro  networkclient.cpp  networkplugin.h  node.cpp  node.h  obstacle.h  packet.h  physics.cpp  physics.h  polyops.cpp  polyops.h  robot.h  segment.cpp  segment.h  serialportreader.cpp  vec2d.cpp  vec2d.h  vec3d.cpp  vec3d.h  visualobject.cpp  waypoint.h  window.h  world.cpp  (+1 more)
navBrain/Lidar/: lidar.cpp  lidar.h
navBrain/data/: Pts.csv
navBrain2/: CMakeLists.txt  CmdLink.cpp  CmdLink.h  areatree.cpp  botcomm.h  botcommmonitor.cpp  botcommmonitor.h  botcommserial.cpp  botcommserial.h  botconnection.cpp  botconnection.h  cell.cpp  cell.h  geometry.cpp  grid.cpp  grid.h  main.cpp  node.cpp  node.h  obstacle.cpp  physics.cpp  polyops.cpp  polyops.h  robot.cpp  segment.cpp  simplecrc.cpp  simplecrc.h  viewport.cpp  waypoint.cpp  waypoint.h  world.cpp  world.h
navBrain2/Lidar/: lidar.cpp
navBrain2/graphics/: graphics.cpp  vec2d.h
navBrain2/utility/: paths.h
newGrid/: CMakeLists.txt  main.cpp
newGrid/CMakeModules/: InstallDepLibs.cmake
newGrid/comm/: serialport.cpp
newGrid/graphics/: graphics.cpp  vec2d.cpp
refactored/: refactored.ino
refactored/Vec2d/: Must Read Me.txt  vec2d.cpp  vec2d.h
remoteControl/: remoteControl.ino
roboTry4/: area.cpp  areatree.cpp  areatree.h  geometry.h  graphics.cpp  main.cpp  networkclient.h  networkplugin.cpp  networkserver.cpp  networkserver.h  node.h  obstacle.cpp  roboTry4.pro  roboTry4.pro.user.2610fec.4.9-pre1  robot.h  segment.h  serialportreader.h  vec2d.cpp  vec2d.h  viewport.h  visualobject.h  world.cpp
trivialWheelchairBrain/: trivialWheelchairBrain.ino
tryLidarAgain/: tryLidarAgain.ino
wheelChairUI/: CMakeLists.txt  CmdLink.cpp  CmdLink.h  absolutepostracker.cpp  main.cpp  motorsim.cpp  robotmotion.h
wheelChairUI/CmdLink/: CmdLink.cpp  CmdLink.h
wheelChairUI/Lidar/: lidar.h
wheelChairUI/comm/: serialport.cpp  serialport.h
wheelChairUI/graphics/: graphics.h  vec2d.h
wheelchairhindbrainMega/: wheelchairhindbrainMega.ino
